# hmexpfamily

./: README.md  pyproject.toml  requirements.txt
hmexpfamily/: config.py  generate_scripts.py
hmexpfamily/templates/: common_header
hmexpfamily/templates/base/: 01__base__checkout_and_setup.sh  01__checkout_and_setup.sh  02__base__config.sh  02__config.sh  03__run_spinup.sh
hmexpfamily/templates/file_replacements/: Env_system
hmexpfamily/templates/file_replacements/ecf/: config_exp.h
hmexpfamily/templates/file_replacements/scr/: Fldextr
hmexpfamily/templates/variant/: 01__setup.sh
hmexpmatrix/: generate_scripts.py
hmexpmatrix/templates/base/: 01__base__checkout.sh  01__base__checkout_and_setup.sh  03__base__run_spinup.sh
